--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                 </div><!--FIM div info-aluno-->
 
                 <div id="info-aula"><!--DIV INFO-AULA-->
+
                     <h3 >Informaçoes sobre a aula/ Class information </h3>
-                    <div><!--Div tipo de aula -->
+                    
+                    <div id="tipo-aula" class="tipo-aula"><!--Div tipo de aula -->
                         <label for="tipo-aula">Tipo de aula / Type of class</label>
                         <select name="tipo-aula" id="tipo-aula" class="form-select bg-light">
                             <option selected></option>
@@ -79,9 +81,31 @@
                             <option value="cancelou">Cancelou / Canceled</option>
                             <option value="demonstrativa">Demonstrativa / Demonstrative</option>
                         </select>
-                    </div><!--Div info da aula -->
+                    </div><!--FIM Div info da aula -->
+
+                    <div id="tempo-aula" class="tempo-aula"><!--Div tempo de aula  -->
+                        <label for="tempo-aula">Tempo da aula / Class time</label>
+                        <select name="tempo-aula" id="tempo-aula" class="form-select bg-light">
+                            <option selected></option>
+                            <option value="30min">00:30 min</option>
+                            <option value="45min">00:45 min</option>
+                            <option value="60min">1:00 hr</option>
+                            <option value="90min">1:30 hr/min</option>
+                            <option value="120min">2:00 hr</option>
+                        </select>
+                    </div><!-- FIM Div tempo de aula-->
+
+                    <div class="tipo-curso" id="tipo-curso"><!--Div curso  -->
+                        <label for="tipo-curso">Curso</label>
+                        <select name="tipo-curso" id="tipo-curso" class="form-select bg-light">
+                            <option selected></option>
+                            <option value="ingles">Inglês / English</option>
+                            <option value="espanhol">Espanhol / Spanish</option>
+                            <option value="programacao">Programação / Programming</option>
+                        </select>
+                    </div><!-- FIM Div curso-->
                     
-                </div>
+                </div> <!--FIM DIV INFO-AULA-->
 
                 <div>
                   <label for="msg">Mensagem:</label>
