--- a/registrar.html
+++ b/registrar.html
@@ -18,8 +18,9 @@
         <img src="styles/image/nav6.png" alt="tres logos juntos">
     </header>
     <!--the end of the tag header-->
+    <button id="menu"></button><!--hamburguer--> 
     <nav>
-        <ul>
+        <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="#">Register</a></li>
             <li><a href="#">Class Records</a></li>
@@ -397,5 +398,6 @@
     <footer>
     </footer>
      <!-- the end of the tag footer-->
+     <script src="scripts/getDate.js"></script>  
 </body>
 </html>
